--- a/master_user/pubspec.yaml
+++ b/master_user/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   get: ^4.6.6
   shared_preferences: ^2.3.4
   connectivity_plus: ^6.1.3
-  firebase_core: ^3.4.0
-  firebase_messaging: ^15.1.0
+  firebase_core: ^3.14.0
+  firebase_messaging: ^15.2.7
   flutter_local_notifications: ^17.2.2
   firebase_crashlytics: ^4.1.3
   firebase_auth: ^5.2.0
@@ -70,6 +70,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   custom_info_window: ^1.0.1
   image_network: ^2.6.0
+  webview_flutter_wkwebview: ^3.22.0
 
 
 dependency_overrides:
