change app name

--- a/master_user/android/app/src/main/AndroidManifest.xml
+++ b/master_user/android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     </queries>
 
     <application
-        android:label="6amMart"
+        android:label="Full Care U"
         android:name="${applicationName}"
         android:extractNativeLibs="true"
         android:requestLegacyExternalStorage="true"
@@ -62,7 +62,7 @@
 
             <meta-data
                 android:name="com.google.firebase.messaging.default_notification_channel_id"
-                android:value="6ammart" />
+                android:value="Full Care U" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
