--- a/full_care_user/pubspec.yaml
+++ b/full_care_user/pubspec.yaml
@@ -12,10 +12,10 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   get: ^4.6.6
-  shared_preferences: ^2.3.4
+  shared_preferences: ^2.5.3
   connectivity_plus: ^6.1.3
-  firebase_core: ^3.14.0
-  firebase_messaging: ^15.2.7
+  firebase_core: ^3.4.0
+  firebase_messaging: ^15.1.0
   flutter_local_notifications: ^17.2.2
   firebase_crashlytics: ^4.1.3
   firebase_auth: ^5.2.0
@@ -70,7 +70,8 @@ dependencies:
   dropdown_button2: ^2.3.9
   custom_info_window: ^1.0.1
   image_network: ^2.6.0
-  webview_flutter_wkwebview: ^3.22.0
+  flutter_localizations:
+    sdk: flutter
 
 
 dependency_overrides:
