--- a/full_care_user/android/app/src/main/AndroidManifest.xml
+++ b/full_care_user/android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     </queries>
 
     <application
-        android:label="Full Care U"
+        android:label="FULL CARE"
         android:name="${applicationName}"
         android:extractNativeLibs="true"
         android:requestLegacyExternalStorage="true"
