feat: integrate DevicePreview for responsive UI testing
- Added `device_preview` package to pubspec.yaml.
- Wrapped `MyApp` inside `DevicePreview` in `main()` for multi-device simulation.
- Enabled `DevicePreview` only in non-release modes (`!kReleaseMode`).
- Applied `DevicePreview.appBuilder` in `GetMaterialApp` builder for full integration.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   app_links: ^6.4.0
+  device_preview: ^1.2.0
 
 
 dependency_overrides:
