--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,15 +31,21 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace "com.fullcareu"
-    compileSdk 35
+    compileSdk 36
+    ndkVersion "28.0.13004108"
 
     compileOptions {
         coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+     packagingOptions {
+        jniLibs {
+            useLegacyPackaging = false
+        }
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -48,7 +54,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.fullcareu"
-        minSdkVersion 23
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
